# SlimeMoldSimulation

./: .gitignore  .gitmodules  AgentSystem.cpp  AgentSystem.h  CMakeLists.txt  ComputeShader.h  Framebuffer.cpp  Framebuffer.h  README.md  Settings.cpp  Settings.h  Shader.h  Simulation.cpp  Simulation.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Window.cpp  Window.h  glad.c  main.cpp  settings.yaml
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: CMakeLists.txt  imgui.cpp  imgui.h
include/: stb_image.h
include/glad/: glad.h
shaders/: agents.comp  color.comp  effects.comp  main.frag  main.vert
src/: AgentSystem.cpp  AgentSystem.h  ComputeShader.h  Framebuffer.cpp  Framebuffer.h  Settings.cpp  Settings.h  Shader.h  Simulation.cpp  Simulation.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
